<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dip"
        android:orientation="vertical"
        android:paddingTop="16dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:text="@string/how_it_works"
            android:textAllCaps="true"
            android:textColor="#444444"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="2dip"
            android:background="#AAA" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:text="@string/how_it_works_sub" />
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"
            android:layout_gravity="right"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dip"
            android:paddingRight="16dip" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dip"
        android:background="@drawable/selector_btn_dark"
        android:drawableLeft="@drawable/ic_action_add_dark"
        android:drawablePadding="8dip"
        android:onClick="inflate"
        android:paddingLeft="16dip"
        android:paddingRight="18dip"
        android:text="@string/add_ui_element"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/container_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >
    </LinearLayout>

</LinearLayout>